UHF-1181: Remove form alter and javascript that hide the entity type selector on content liftup

--- a/src/scss/paragraphs/_content-liftup.scss
+++ b/src/scss/paragraphs/_content-liftup.scss
@@ -11,6 +11,18 @@
       .form-item {
         margin: 0;
       }
+
+      .form-type--select {
+        align-content: flex-start;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+        margin-right: $spacing;
+
+        label {
+          line-height: 20px;
+        }
+      }
     }
   }
 
