--- a/src/scss/misc/_paragraph-selection.scss
+++ b/src/scss/misc/_paragraph-selection.scss
@@ -1,4 +1,5 @@
 $button-height: 4rem;
+$button-border-thickness: 2px;
 $button-border-radius: 6px;
 
 .paragraph-selection,
@@ -13,7 +14,7 @@ $button-border-radius: 6px;
     width: 400px;
 
     .dropbutton__item {
-      min-height: $button-height; // Height.
+      min-height: calc(#{$button-height} - (#{$button-border-thickness} * 2));
 
       &:first-of-type {
         > * {
@@ -28,8 +29,9 @@ $button-border-radius: 6px;
   }
 
   .dropbutton__toggle {
-    min-height: $button-height;
+    min-height: calc(#{$button-height} - (#{$button-border-thickness} * 2));
     min-width: calc(3rem + 1px);
+    z-index: 5;
   }
 
   // Paragraph selection styles.
@@ -38,9 +40,9 @@ $button-border-radius: 6px;
     border-bottom: 0;
     border-left: 0;
     border-radius: $button-border-radius 0 0 $button-border-radius;
-    border-right: 2px solid var(--colorGinTableBorder);
+    border-right: $button-border-thickness solid var(--colorGinTableBorder);
     border-top: 0;
-    height: $button-height;
+    height: calc(#{$button-height} - (#{$button-border-thickness} * 2));
     object-fit: cover;
     transition: transform .2s ease-in-out;
     width: 100px;
@@ -68,7 +70,7 @@ $button-border-radius: 6px;
       box-shadow: none;
       display: block;
       margin: 0;
-      min-height: $button-height;
+      min-height: calc(#{$button-height} - (#{$button-border-thickness} * 2));
       padding: 0 0 0 $spacing;
       text-align: left;
       width: 100%;
@@ -85,8 +87,9 @@ $button-border-radius: 6px;
   }
 
   &.dropbutton .dropbutton__items {
-    border: 2px solid var(--colorGinTableBorder);
+    border: $button-border-thickness solid var(--colorGinTableBorder);
     bottom: auto;
+    padding: 0;
     width: calc(100% - 4px);
 
     .dropbutton__item {
