--- a/modules/select2_icon/templates/select2-icon.html.twig
+++ b/modules/select2_icon/templates/select2-icon.html.twig
@@ -1,6 +1,1 @@
-{% if sprite_url %}
-  <svg {% if icon_label %} aria-labelledby="{{ icon_id }}" {% endif %} class="icon">
-    {% if icon_label %} <title id="{{ icon_id }}">{{ icon_label }}</title>{% endif %}
-    <use xlink:href="{{ sprite_url|trim }}#{{ icon_id }}"/>
-  </svg>
-{% endif %}
+<span class="hdbt-icon hdbt-icon--{{ icon_id }} {{ class }}" {% if label %} aria-label="{{ label }}" {% else %} aria-hidden="true" {% endif %}></span>
