Fixed line-height on hdbt-icon.

--- a/modules/select2_icon/assets/css/select2_icon.css
+++ b/modules/select2_icon/assets/css/select2_icon.css
@@ -19,6 +19,11 @@
   z-index: 10002;
 }
 
+.select2-results .hdbt-icon,
+.select2-selection .hdbt-icon {
+  line-height: 1;
+}
+
 .select2-results .hdbt-icon::before,
 .select2-selection .hdbt-icon::before {
   --icon-proportions: 36px;
