Updated select2 icon widget to use hel-icon.

--- a/modules/select2_icon/templates/select2-icon.html.twig
+++ b/modules/select2_icon/templates/select2-icon.html.twig
@@ -1,1 +1,1 @@
-<span class="hdbt-icon hdbt-icon--{{ icon_id }} {{ class }}" {% if label %} aria-label="{{ label }}" {% else %} aria-hidden="true" {% endif %}></span>
+<span class="hel-icon hel-icon--{{ icon_id }} {{ class }}" {% if label %} aria-label="{{ label }}" {% else %} aria-hidden="true" {% endif %}></span>
