UHF-3109: Updated edit media button style for media library widget.

--- a/src/scss/views/_media-library.scss
+++ b/src/scss/views/_media-library.scss
@@ -2,4 +2,9 @@
   .media-library-item__click-to-select-checkbox .form-boolean {
     box-shadow: 0 3px 6px $color-black-50;
   }
+
+  // Override edit-button position for media library widget.
+  .media-library-item__edit {
+    right: 0.5rem;
+  }
 }
