--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -3,16 +3,14 @@
 // This file includes all imports
 //
 
-@import "library/_index";
-@import "site-settings";
-@import "common";
+// This folder structure is based loosely on ITCSS
+@import '00_functions/_index';
+@import '01_variables/_index';
+@import '02_mixins/_index';
 
-@import "layout/_index";
-@import "navigation/_index";
-@import "entity/_index";
-@import "node/_index";
-@import "paragraphs/_index";
-@import "views/_index";
-@import "common/_index";
-@import "misc/_index";
-@import "state/_index";
+/* Content is created after this point */
+@import '03_generic/_index';
+@import '04_elements/_index';
+@import '05_objects/_index';
+@import "06_components/_index";
+@import "07_utilities/_index";
