UHF-4163: UHF-4163 Fix group edit header

--- a/src/scss/06_components/navigation/_local-actions.scss
+++ b/src/scss/06_components/navigation/_local-actions.scss
@@ -1,7 +1,8 @@
-body:not(.path-node) {
-  header.region {
-    .local-actions .local-actions__item a {
-      white-space: nowrap;
-    }
+body:not(.path-node) header.region {
+  .local-actions {
+    white-space: nowrap;
+  }
+  .local-actions__item a {
+    white-space: nowrap;
   }
 }
