--- a/templates/form/form-element--default-icon.html.twig
+++ b/templates/form/form-element--default-icon.html.twig
@@ -32,10 +32,7 @@
     description_display == 'invisible' ? 'visually-hidden',
   ]
 %}
-{# // Apply custom color for the element border #}
-{% set input_style = '--input-radio-color-palette: var(--hdbt-color-' ~ element['#return_value'] ~ '--primary); --input-radio-color-palette-text: var(--hdbt-color-' ~ element['#return_value'] ~ '-text-primary);' %}
-
-<div{{ attributes.addClass(classes).setAttribute('style', input_style) }}>
+<div{{ attributes.addClass(classes) }}>
   {% if label_display in ['before', 'invisible'] %}
     {{ label }}
   {% endif %}
