--- a/src/scss/06_components/misc/_color-palette-selection.scss
+++ b/src/scss/06_components/misc/_color-palette-selection.scss
@@ -38,18 +38,18 @@
     display: flex;
     width: 100%;
 
-    .primary {
-      background-color: var(--color-palette-selection--primary);
+    .color-section--primary {
+      background-color: var(--hdbt-color-palette--primary);
       height: 100%;
       width: 50%;
     }
-    .secondary {
-      background-color: var(--color-palette-selection--secondary);
+    .color-section--secondary {
+      background-color: var(--hdbt-color-palette--secondary);
       height: 100%;
       width: 25%;
     }
-    .accent  {
-      background-color: var(--color-palette-selection--accent);
+    .color-section--accent  {
+      background-color: var(--hdbt-color-palette--accent);
       height: 100%;
       width: 25%;
     }
