--- a/templates/form/form-element--theme-color.html.twig
+++ b/templates/form/form-element--theme-color.html.twig
@@ -24,6 +24,7 @@
     title_display not in ['after', 'before'] ? 'form-item--no-label',
     disabled == 'disabled' ? 'form-item--disabled',
     errors ? 'form-item--error',
+    'hdbt-theme--' ~ element['#return_value'],
   ]
 %}
 {%
@@ -32,10 +33,8 @@
     description_display == 'invisible' ? 'visually-hidden',
   ]
 %}
-{# // Apply custom color for the element border #}
-{% set input_style = '--input-radio-color-palette: var(--hdbt-color-' ~ element['#return_value'] ~ '--primary); --input-radio-color-palette-text: var(--hdbt-color-' ~ element['#return_value'] ~ '-text-primary);' %}
 
-<div{{ attributes.addClass(classes).setAttribute('style', input_style) }}>
+<div{{ attributes.addClass(classes) }}>
   {% if label_display in ['before', 'invisible'] %}
     {{ label }}
   {% endif %}
@@ -48,9 +47,9 @@
     </div>
   {% endif %}
   <div class="color-palette-wrapper">
-    <div class="color-palette color-palette--primary" style="--input-radio-color-palette: var(--hdbt-color-{{ element['#return_value'] }}--primary); --input-radio-color-palette-text: var(--hdbt-color-{{ element['#return_value'] }}-text--primary);">{{ 'Primary'|t([],{'langcode': currentLanguageCode,'context':'Primary color' }) }}</div>
-    <div class="color-palette color-palette--secondary" style="--input-radio-color-palette: var(--hdbt-color-{{ element['#return_value'] }}--secondary); --input-radio-color-palette-text: var(--hdbt-color-{{ element['#return_value'] }}-text--secondary);">{{ 'Secondary'|t([],{'langcode': currentLanguageCode,'context':'Secondary color'}) }}</div>
-    <div class="color-palette color-palette--accent" style="--input-radio-color-palette: var(--hdbt-color-{{ element['#return_value'] }}--accent); --input-radio-color-palette-text: var(--hdbt-color-{{ element['#return_value'] }}-text--accent);">{{ 'Accent'|t([],{'langcode': currentLanguageCode,'context':'Accent color'}) }}</div>
+    <div class="color-palette color-palette--primary">{{ 'Primary'|t([],{'langcode': currentLanguageCode,'context':'Primary color' }) }}</div>
+    <div class="color-palette color-palette--secondary">{{ 'Secondary'|t([],{'langcode': currentLanguageCode,'context':'Secondary color'}) }}</div>
+    <div class="color-palette color-palette--accent">{{ 'Accent'|t([],{'langcode': currentLanguageCode,'context':'Accent color'}) }}</div>
   </div>
   <div class="selection-wrapper">
     {{ children }}
