UHF-4451: Fix missing tbody tag end

--- a/templates/module/helfi_debug/debug-item--composer.html.twig
+++ b/templates/module/helfi_debug/debug-item--composer.html.twig
@@ -53,4 +53,5 @@
         <td data-package="{{ package.name }}" data-version="{{ package.version }}"></td>
       </tr>
     {% endfor %}
+  </tbody>
 </table>
