--- a/src/scss/06_components/_select2.scss
+++ b/src/scss/06_components/_select2.scss
@@ -12,20 +12,26 @@
     border-radius: 6px;
     box-shadow: 0 1px 2px rgba($hdbt-color-black, .25);
     color: var(--colorGinText);
-    min-height: 50px;
+    font-size: 16px;
+    min-height: 60px;
 
     &:hover {
       border-color: var(--colorGinText);
       box-shadow: inset 0 0 0 1px var(--colorGinText);
     }
 
-    .select2-selection__arrow,
     .select2-selection__clear {
-      padding: 7px;
+      padding: 7px 10px 7px 7px;
+    }
+
+    .select2-selection__placeholder {
+      font-size: 16px;
+      padding: 5px 5px;
     }
 
     .select2-selection__arrow {
-      height: 35px;
+      height: 45px;
+      padding: 7px 7px 7px 10px;
       right: 5px;
       top: 0;
     }
@@ -34,6 +40,7 @@
       align-items: center;
       display: flex;
       flex-flow: row wrap;
+      font-size: 16px;
       padding: 12px 16px;
     }
 
