--- a/templates/entity/tpr-service-form.html.twig
+++ b/templates/entity/tpr-service-form.html.twig
@@ -7,16 +7,4 @@
  * as its #theme callback.
  */
 #}
-<div class="layout-node-form clearfix">
-  <div class="layout-region layout-region-node-main">
-    {{ form|without('advanced', 'footer', 'actions', 'gin_actions', 'gin_sidebar') }}
-  </div>
-  <div class="layout-region layout-region-node-secondary">
-    <div class="layout-region__content">
-      {{ form.advanced }}
-    </div>
-  </div>
-  <div class="layout-node-form__actions">
-    {{ form.gin_actions }}
-  </div>
-</div>
+{% include '@gin/node/node-edit-form.html.twig' %}
