--- a/templates/views/views-view-table.html.twig
+++ b/templates/views/views-view-table.html.twig
@@ -40,7 +40,7 @@
     sticky ? 'sticky-enabled',
   ]
 %}
-<div class="gin-table-scroll-wrapper views-form">
+<div class="gin-table-scroll-wrapper">
   <table{{ attributes.addClass(classes) }}>
     {% if caption_needed %}
       <caption>
