UHF-4815: Refactored styles for Gin theme design changes.

--- a/src/scss/06_components/entity/_helfi-chart.scss
+++ b/src/scss/06_components/entity/_helfi-chart.scss
@@ -1,5 +1,5 @@
 // Media library item preview for helfi-chart.
-.helfi-chart {
+.media-library-item .helfi-chart {
   .media-library-item__preview {
     padding-bottom: 0;
   }
