--- a/src/scss/06_components/views/_views.scss
+++ b/src/scss/06_components/views/_views.scss
@@ -7,3 +7,9 @@
     text-align: right;
   }
 }
+
+.view-content {
+  [data-drupal-selector*=-bulk-form] .form-actions {
+    align-self: baseline;
+  }
+}
