--- a/src/scss/06_components/misc/_paragraph-selection.scss
+++ b/src/scss/06_components/misc/_paragraph-selection.scss
@@ -69,6 +69,7 @@ $button-border-radius: 6px;
       border-radius: 0;
       box-shadow: none;
       display: block;
+      font-size: remify(14px);
       margin: 0;
       min-height: calc(#{$button-height} - (#{$button-border-thickness} * 2));
       padding: 0 0 0 $spacing;
