UHF-4815: Fixed some of the styles based on stylelint rules.

--- a/src/scss/00_functions/_unit.scss
+++ b/src/scss/00_functions/_unit.scss
@@ -1,6 +1,6 @@
 // Use Dart Sass math module to perform calculations.
 // https://sass-lang.com/documentation/modules/math
-@use "sass:math";
+@use 'sass:math';
 
 // Function nounit strips any unit from variable.
 @function nounit($number) {
