--- a/src/scss/03_generic/__index.scss
+++ b/src/scss/03_generic/__index.scss
@@ -1,4 +1,4 @@
-@import "base";
+@import 'base';
 @import 'colors';
-@import "fonts";
-@import "site-settings";
+@import 'fonts';
+@import 'site-settings';
