--- a/src/scss/06_components/__index.scss
+++ b/src/scss/06_components/__index.scss
@@ -1,8 +1,8 @@
-@import "layout/_index";
-@import "block/_index";
-@import "navigation/_index";
-@import "entity/_index";
-@import "paragraphs/_index";
-@import "views/_index";
-@import "select2";
-@import "misc/_index";
+@import 'layout/_index';
+@import 'block/_index';
+@import 'navigation/_index';
+@import 'entity/_index';
+@import 'paragraphs/_index';
+@import 'views/_index';
+@import 'select2';
+@import 'misc/_index';
