--- a/src/scss/06_components/paragraphs/_common.scss
+++ b/src/scss/06_components/paragraphs/_common.scss
@@ -14,7 +14,7 @@
     }
 
     .paragraph-type-label {
-      font-size: 18px !important;
+      font-size: remify(18px) !important;
     }
 
     table.field-multiple-table {
