--- a/src/scss/06_components/views/_views.scss
+++ b/src/scss/06_components/views/_views.scss
@@ -2,7 +2,7 @@
   overflow: hidden;
 
   .view-results {
-    @include font-size(13px);
+    font-size: remify(13px);
     padding: $spacing-quarter;
     text-align: right;
   }
