--- a/src/scss/01_variables/_colors.scss
+++ b/src/scss/01_variables/_colors.scss
@@ -1,8 +1,7 @@
 // Color variables from HDS.
-@import "~hds-design-tokens/lib/color/all.scss";
-@import "~hds-design-tokens/lib/color/all.css";
+@import '~hds-design-tokens/lib/color/all.scss';
+@import '~hds-design-tokens/lib/color/all.css';
 
 $hdbt-color-black: #121212;
 $hdbt-color-white: #f7f7f8;
-
 $body-bg-color: $color-white;
