--- a/src/scss/01_variables/_media-queries.scss
+++ b/src/scss/01_variables/_media-queries.scss
@@ -1,2 +1,2 @@
 // Breakpoint variables from HDS.
-@import "~hds-design-tokens/lib/breakpoint/breakpoint.scss";
+@import '~hds-design-tokens/lib/breakpoint/breakpoint.scss';
