--- a/src/scss/03_generic/_site-settings.scss
+++ b/src/scss/03_generic/_site-settings.scss
@@ -63,6 +63,36 @@
       }
     }
 
+    .color-palette {
+      align-items: center;
+      background-color: var(--input-radio-color-palette);
+      color: var(--input-radio-color-palette-text);
+      display: flex;
+      flex-grow: 1;
+      font-size: remify($base-font-size);
+      font-weight: $font-weight-medium;
+      height: 100%;
+      justify-content: center;
+    }
+
+    .color-palette--primary {
+      --input-radio-color-palette: var(--hdbt-color-palette--primary);
+      --input-radio-color-palette-text: var(--hdbt-color-palette-text--primary);
+      font-weight: $font-weight-bold;
+    }
+
+    .color-palette--secondary {
+      --input-radio-color-palette: var(--hdbt-color-palette--secondary);
+      --input-radio-color-palette-text: var(--hdbt-color-palette-text--secondary);
+      font-weight: $font-weight-bold;
+    }
+
+    .color-palette--accent {
+      --input-radio-color-palette: var(--hdbt-color-palette--accent);
+      --input-radio-color-palette-text: var(--hdbt-color-palette-text--accent);
+      font-weight: $font-weight-bold;
+    }
+
     .color-palette-wrapper {
       align-items: center;
       display: flex;
@@ -88,38 +118,8 @@
       min-width: 180px;
 
       label {
-        @include font-size(20px);
+        font-size: remify(20px);
       }
-    }
-
-    .color-palette {
-      @include font-size(16px);
-      align-items: center;
-      background-color: var(--input-radio-color-palette);
-      color: var(--input-radio-color-palette-text);
-      display: flex;
-      flex-grow: 1;
-      font-weight: $font-weight-medium;
-      height: 100%;
-      justify-content: center;
-    }
-
-    .color-palette--primary {
-      --input-radio-color-palette: var(--hdbt-color-palette--primary);
-      --input-radio-color-palette-text: var(--hdbt-color-palette-text--primary);
-      font-weight: $font-weight-bold;
-    }
-
-    .color-palette--secondary {
-      --input-radio-color-palette: var(--hdbt-color-palette--secondary);
-      --input-radio-color-palette-text: var(--hdbt-color-palette-text--secondary);
-      font-weight: $font-weight-bold;
-    }
-
-    .color-palette--accent {
-      --input-radio-color-palette: var(--hdbt-color-palette--accent);
-      --input-radio-color-palette-text: var(--hdbt-color-palette-text--accent);
-      font-weight: $font-weight-bold;
     }
 
     .koro {
