--- a/src/scss/06_components/entity/_hel-map.scss
+++ b/src/scss/06_components/entity/_hel-map.scss
@@ -13,7 +13,7 @@ form[data-drupal-media-type="hel_map"] {
       &::before {
         background: rgba($color-black, 0.1);
         bottom: 0;
-        content: "";
+        content: '';
         left: 0;
         position: absolute;
         right: 0;
