--- a/src/scss/06_components/misc/_diff.scss
+++ b/src/scss/06_components/misc/_diff.scss
@@ -3,7 +3,9 @@
   margin: 0 auto;
   max-width: 1280px;
 
-  *, *:before, *:after {
+  *,
+  *::before,
+  *::after {
     box-sizing: inherit;
   }
 
@@ -29,23 +31,26 @@
   del.diffimg {
     img {
       filter: grayscale(1);
-      opacity: .5;
+      opacity: 0.5;
     }
   }
 }
 
 // Title of the node that is being diffed.
 .diff-responsive-table-wrapper {
-  h2, h3, h4 {
+  h2,
+  h3,
+  h4 {
     font-weight: 400;
   }
 
-  h5, h6 {
+  h5,
+  h6 {
     font-weight: 500;
   }
 
   > h2 {
-    @include font-size(34px, 50px);
+    font-size: remify(34px);
   }
 
   p {
@@ -61,7 +66,7 @@
   }
 
   .field--name-field-lead {
-    @include font-size(20px, 28px);
+    font-size: remify(20px);
     margin-top: $spacing-quadruple;
   }
 
