--- a/src/scss/06_components/paragraphs/_banner.scss
+++ b/src/scss/06_components/paragraphs/_banner.scss
@@ -3,7 +3,7 @@
   margin-top: $spacing-quadruple;
 
   .field--name-field-banner-title {
-    @include font-size(32px, 48px);
+    font-size: remify(32px);
   }
 
   .field--name-field-banner-design {
