--- a/src/scss/06_components/paragraphs/_columns.scss
+++ b/src/scss/06_components/paragraphs/_columns.scss
@@ -46,7 +46,7 @@
   overflow: hidden;
 
   .field--name-field-columns-title {
-    @include font-size(32px, 48px);
+    font-size: remify(32px);
     margin-bottom: $spacing;
   }
 
