--- a/src/scss/06_components/paragraphs/_list-of-links.scss
+++ b/src/scss/06_components/paragraphs/_list-of-links.scss
@@ -87,7 +87,7 @@
   }
 
   .field--name-field-list-of-links-title {
-    @include font-size(32px, 48px);
+    font-size: remify(32px);
     margin-bottom: $spacing;
   }
 
@@ -100,7 +100,7 @@
   }
 
   .field--name-field-list-of-links-link {
-    @include font-size(20px, 24px);
+    font-size: remify(20px);
     margin-top: $spacing-half;
   }
 }
