UHF-4815: Added divider for the mobile sidebar.

--- a/src/scss/01_variables/_constraints.scss
+++ b/src/scss/01_variables/_constraints.scss
@@ -8,11 +8,13 @@
 
 $gutter: 16px;
 
-$spacing: $gutter; // 16px
+$spacing: $gutter;                 // 16px
 $spacing-quarter: $spacing * 0.25; // 4px
-$spacing-half: $spacing * 0.5; // 8px
-$spacing-double: $spacing * 2; // 32px
-$spacing-triple: $spacing * 3; // 48px
-$spacing-quadruple: $spacing * 4; // 64px
+$spacing-half: $spacing * 0.5;     // 8px
+$spacing-and-half: $spacing * 1.5; // 24px
+$spacing-double: $spacing * 2;     // 32px
+$spacing-triple: $spacing * 3;     // 48px
+$spacing-quadruple: $spacing * 4;  // 64px
+$spacing-sextuple: $spacing * 6;   // 96px
 
 $wrapper-width-max: 1920px;
