--- a/src/scss/06_components/layout/_header.scss
+++ b/src/scss/06_components/layout/_header.scss
@@ -4,21 +4,39 @@
     z-index: 110;
   }
 
+  // Add consistent styles to all entity status (published) fields.
+  .form-item--status,
+  .field--name-status {
+    align-items: center;
+    display: flex;
+    margin-right: $spacing-and-half;
+  }
+
+  // Add divider for sidebar when viewing it in tablet width.
+  @media (max-width: 1023px) {
+    .hdbt_admin--edit-form .layout-region-node-secondary {
+      border-top: 2px solid $color-black-30;
+      margin-top: $spacing-double;
+      width: 100%;
+    }
+  }
+
   // Adjust the button font sizes on sticky header.
   .region-sticky {
     background-color: $body-bg-color;
 
     .region-sticky__items__inner {
       @media (min-width: 1024px) and (max-width: 1280px) {
+        .button {
+          font-size: remify(14px);
+          padding: $spacing-half $spacing * 0.75;
+        }
+
+        .form-item--status,
         .field--name-status {
           label {
             font-size: remify(14px);
           }
-        }
-
-        .button {
-          font-size: remify(14px);
-          padding: $spacing-half $spacing * .75;
         }
       }
     }
