UHF-4815: Fixed borken lang attribute.

--- a/src/scss/ckeditor.scss
+++ b/src/scss/ckeditor.scss
@@ -15,7 +15,7 @@ span[lang] {
 
   &::after {
     color: #005799;
-    content: ' ("attr(lang)")';
+    content: " ("attr(lang)")";
     font-size: remify(12px);
   }
 }
