UHF-5897: Added form alter for the promoted to front page checkbox and styles for it.

--- a/src/scss/06_components/navigation/_sidebar.scss
+++ b/src/scss/06_components/navigation/_sidebar.scss
@@ -1,4 +1,9 @@
 .hdbt-admin {
+  // Remove artificial colon from promote checkbox label.
+  .entity-meta__promote .form-item__label::after {
+    content: '';
+  }
+
   // Add more spacing to sidebar published at fields.
   .entity-meta__revision .field--type-published-at {
     display: inline-block;
