Fixed paragraph adding button width which was set to  fixed width in Drupal core 9.4.0 claro update.

--- a/src/scss/06_components/misc/_paragraph-selection.scss
+++ b/src/scss/06_components/misc/_paragraph-selection.scss
@@ -97,6 +97,7 @@ $button-border-radius: 6px;
       border: 0;
       box-shadow: none;
       margin: 0;
+      max-width: 100%;
 
       .paragraph-selection__wrapper {
         background-color: $color-white;
