--- a/src/scss/00_functions/_unit.scss
+++ b/src/scss/00_functions/_unit.scss
@@ -13,5 +13,16 @@
 /// @param {Number} value - value in px to be converted to rem units.
 /// @param {Number} base-size - font-size of html element in pixels; defaults to $rem-base-size.
 @function remify($value, $base-size: $base-font-size) {
-  @return $value / $base-size + 0rem;
+  // stylelint-disable-next-line length-zero-no-unit
+  @return math.div($value, $base-size) + 0rem;
+}
+
+/// Unremify
+/// Convert rem to px units
+///
+/// @param {Number} value - value in rem to be converted to px units.
+/// @param {Number} base-size - font-size of html element in pixels; defaults to $rem-base-size.
+@function unremify($value, $base-size: $base-font-size) {
+  // stylelint-disable-next-line length-zero-no-unit
+  @return nounit($value) * $base-size + 0px;
 }
