--- a/src/scss/06_components/views/_views.scss
+++ b/src/scss/06_components/views/_views.scss
@@ -13,3 +13,15 @@
     align-self: baseline;
   }
 }
+
+// Main news feed ordering -view highlight.
+#views-form-ordered-news-list-ordered-news {
+  table tbody tr {
+    &:nth-child(-n+4) {
+      background: rgba(46,160,67,0.1);
+    }
+    &:nth-child(4) {
+      border-bottom: 1px solid $color-black;
+    }
+  }
+}
