--- a/src/scss/06_components/misc/_design-selection.scss
+++ b/src/scss/06_components/misc/_design-selection.scss
@@ -48,8 +48,8 @@
   border-radius: 6px;
   height: 50px;
   margin-left: 16px;
+  min-width: 100px;
   transition: transform 150ms;
-  width: 100px;
 
   &:hover {
     transform: scale(1.1);
